# aequitas-reasoner-service

./: .env.test  .gitignore  LICENSE  README.md  docker-compose.yml  neo4j-healthcheck.sh  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  run_tests.py
.github/workflows/: build.yml  release.yml
app/: main.py
app/application/: QuestionService.py  QuestionnaireService.py
app/domain/core/: Answer.py  Project.py  Question.py  QuestionId.py  __init__.py
app/domain/factories/: AnswerFactory.py  ProjectFactory.py  QuestionFactory.py  __init__.py
app/domain/repositories/: QuestionRepository.py  QuestionnaireRepository.py
app/presentation/: presentation.py
app/resources/: answers.py  projects.py  questionnaires.py  questions.py
app/storage/repositories/: GraphQuestionRepository.py
application/: QuestionService.py  __init__.py  question_service.py
application/graph/: graph_question_service.py  question_service.py
application/project/: project_service.py  question_service.py  questionnaire_service.py
docs/api/: responses.yaml  schemas.yaml  specification.yaml
docs/asyncapi/: specification.yml
docs/openapi/: schemas.yml  specification.yml
docs/uml/: Architecture.puml  Graph.puml  Project.puml  QA.puml
domain/common/core/: __init__.py  answer.py  answer_id.py  question.py  question_id.py
domain/common/factories/: __init__.py  answer_factory.py
domain/core/: Project.py  Question.py  __init__.py
domain/core/commons/: Answer.py  Project.py  Question.py  __init__.py
domain/factories/: AnswerFactory.py  ProjectFactory.py  QuestionFactory.py  SelectableQuestionFactory.py  __init__.py
domain/repositories/: QuestionRepository.py
presentation/: presentation.py
storage/repositories/: GraphQuestionRepository.py  __init__.py  graph_question_repository.py
test/integration/: test_TestAnswersAPI.py  test_TestProjectsAPI.py  test_TestQuestionsAPI.py
test/resources/: question-graph-example.yml  questions-example.yml  questions-load-example.yml
test/utils/: utils.py
utils/: env.py  errors.py  neo4j_driver.py  status_code.py
ws/: main.py  setup.py
ws/resources/: projects.py  questionnaires.py  questions.py
ws/utils/: logger.py
(+86 files in other folders)
