[tool.poetry]
name = "Reasoner Service"
version = "0.1.0"
description = "Reasoner servive of Aequitas"
authors = ["aequitas-aod"]
packages = [{include = "ws"}]

[tool.poetry.dependencies]
python = ">= 3.10.0, < 4.0.0"
flask = "3.0.3"
flask-restful = "0.3.10"
requests = "2.32.3"
waitress = "3.0.0"
python-dotenv = "1.0.1"
pydantic = "2.7.4"
neo4j = "5.22.0"
flask-cors = "4.0.1"
pyyaml = "6.0.1"
backoff = "2.2.1"
shortuuid = "1.0.13"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
python-on-whales = "0.71.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "python -m unittest discover -v -t . -s test -p 'test_*.py'"
unit-test = "python -m unittest discover -v -t . -s test/unit -p 'test_*.py'"
integration-test = "python -m unittest discover -v -t . -s test/integration -p 'test_*.py'"
format-check = "black --check ."
format = "black ."

[tool.poe.tasks.dev]
shell = "FLASK_ENV=develop flask --app ws/main.py run -h localhost -p $port"
args = ["port"]

[tool.poe.tasks.serve]
shell = "waitress-serve --port $port --call ws.main:create_app"
args = ["port"]